# MRRP-Navigation

./: .gitignore  AGENTS.md  Build-HoloLens.ps1  CITATION.cff  README.md
Assets/Editor/: BuildAppx.cs  UIAutoFixer.cs  UIResizer.cs  UIStyleApplier.cs  VirtualCarCreator.cs
Assets/Materials/: CarBody.mat  CarBumper.mat  CarGrill.mat  CarHub.mat  CarLight.mat  CarRoof.mat  CarTailLight.mat  CarWheel.mat  CarWindow.mat
Assets/Prefabs/: VirtualCar.prefab
Assets/Scenes/: MainScene.unity
Assets/Scripts/Anchor/: SpatialAnchorManager.cs
Assets/Scripts/Path/: HandTracker.cs  PathData.cs  PathRenderer.cs
Assets/Scripts/ROS/: CoordinateConverter.cs  OdomSubscriber.cs  PathSender.cs  ROSConnectionManager.cs
Assets/Scripts/Robot/: LocalPathFollower.cs  VirtualCarController.cs
Assets/Scripts/UI/: ConfirmDialog.cs  KeyboardTest.cs  MainMenuController.cs  PlayModeInputController.cs  PlayModeUIFixer.cs  PreferredPathMenuController.cs
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
docs/: HoloLens2_Deployment_Guide.md  MRReP_UI_Design_Guidelines.md  PRD.md  Unity_Scene_Setup.md
ros_ws/src/mrrep/: CMakeLists.txt  package.xml
ros_ws/src/mrrep/scripts/: path_receiver.py  pure_pursuit.py  tcp_endpoint.py
