<?xml version="1.0"?>
<package format="2">
  <name>mrrep</name>
  <version>0.1.0</version>
  <description>MRReP - Mixed Reality Hand-drawn Reference Path</description>
  <maintainer email="dev@mrrep.local">developer</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
</package>
